--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
     <div id="navbar" class="navbar-collapse collapse">
       <form class="navbar-form navbar-right" role="form">
         <div class="form-group">
-          <input type="text" placeholder="Email" class="form-control">
+          <input type="text" placeholder="Email" class="form-control" name="mail" required>
         </div>
         <div class="form-group">
-          <input type="password" placeholder="Password" class="form-control">
+          <input type="password" placeholder="Password" class="form-control" name="pass" required>
         </div>
         <button type="submit" class="btn btn-success">Sign in</button>
       </form>
-    </div><!--/.navbar-collapse -->
+      <span class="navbar-text navbar-right" style="display: none"></span>
+    </div>
+    <!--/.navbar-collapse -->
   </div>
 </nav>
 
