--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html class="no-js" lang=""> <!--<![endif]-->
+<html class="no-js" lang="">
+<!--<![endif]-->
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Personal Website: Home, improved</title>
+  <title>Norse Mithology</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -20,105 +22,111 @@
 
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
+
 <body>
-<!--[if lt IE 8]>
+  <!--[if lt IE 8]>
 <p class="browserupgrade">
   You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
   your browser</a> to improve your experience.
 </p>
 <![endif]-->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+          aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html"></a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <form class="navbar-form navbar-right" role="form">
+          <div class="form-group">
+            <input type="text" placeholder="Email" class="form-control" name="mail" required>
+          </div>
+          <div class="form-group">
+            <input type="password" placeholder="Password" class="form-control" name="pass" required>
+          </div>
+          <button type="submit" class="btn btn-success">Sign in</button>
+        </form>
+        <span class="navbar-text navbar-right" style="display: none"></span>
+      </div>
+      <!--/.navbar-collapse -->
+    </div>
+  </nav>
+
+  <!-- Main jumbotron for a primary marketing message or call to action -->
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Norse Mithology</h1>
+      <p>Norse or Scandinavian mythology is the body of myths of the North Germanic peoples,
+        stemming from Norse paganism and continuing after the Christianization of Scandinavia,
+        and into the Scandinavian folklore of the modern period.
+        The northernmost extension of Germanic mythology and stemming from Proto-Germanic folklore,
+        Norse mythology consists of tales of various deities, beings,
+        and heroes derived from numerous sources from both before and after the pagan period,
+        including medieval manuscripts, archaeological representations, and folk tradition.
+      </p>
+      <p><a class="btn btn-primary btn-lg" href="NorseHistory.html" role="button">Learn more &raquo;</a></p>
+    </div>
+  </div>
+
   <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-              aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Project name</a>
+    <!-- Example row of columns -->
+    <div class="row">
+      <div class="col-md-4">
+        <h2>VANIR GODS</h2>
+        <p>In Norse mythology, the Vanir (/ˈvɑːnɪər/;[1] Old Norse: [ˈwɑniʐ], singular Vanr [ˈwɑnʐ]) are a group of gods
+          associated with fertility, wisdom, and the ability to see the future.</p>
+        <p><a class="btn btn-default" href="Vanir.html" role="button">More about Vanir &raquo;</a></p>
+      </div>
+      <div class="col-md-4">
+        <h2>AESIR GODS</h2>
+        <p>The Aesir (pronounced “ICE-ir”; Old Norse Æsir for multiple gods, Ásynjur for multiple goddesses, Áss for one
+          god, and Ásynja for one goddess)
+          were one of the two main tribes of deities venerated by the pre-Christian Norse. </p>
+        <p><a class="btn btn-default" href="Aesir.html" role="button">More about Aesir &raquo;</a></p>
+      </div>
+      <div class="col-md-4">
+        <h2>RAGNAROK</h2>
+        <p>“Battle of the Doomed Gods” by Friedrich Wilhelm Heine (1882) Ragnarok is the cataclysmic destruction of the
+          cosmos and everything in it – even the gods.</p>
+        <p><a class="btn btn-default" href="StoryOfRagnarok.html" role="button">More about Ragnarok &raquo;</a></p>
+      </div>
     </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <form class="navbar-form navbar-right" role="form">
-        <div class="form-group">
-          <input type="text" placeholder="Email" class="form-control" name="mail" required>
-        </div>
-        <div class="form-group">
-          <input type="password" placeholder="Password" class="form-control" name="pass" required>
-        </div>
-        <button type="submit" class="btn btn-success">Sign in</button>
-      </form>
-      <span class="navbar-text navbar-right" style="display: none"></span>
-    </div>
-    <!--/.navbar-collapse -->
+
+    <hr>
+
+    <footer>
+      <p>&copy; A&M</p>
+    </footer>
   </div>
-</nav>
+  <!-- /container -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-<!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
-  <div class="container">
-    <h1>Hello, world!</h1>
-    <p>This is a template for a simple marketing or informational website. It includes a large callout called a
-      jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-  </div>
-</div>
+  <script src="js/vendor/bootstrap.min.js"></script>
 
-<div class="container">
-  <!-- Example row of columns -->
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-        sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-        sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-        felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-        massa justo sit amet risus.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-  </div>
+  <script src="js/main.js"></script>
 
-  <hr>
-
-  <footer>
-    <p>&copy; Company 2015</p>
-  </footer>
-</div>
-<!-- /container -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-<script src="js/vendor/bootstrap.min.js"></script>
-
-<script src="js/main.js"></script>
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-<script>
-  (function (b, o, i, l, e, r) {
-    b.GoogleAnalyticsObject = l;
-    b[l] || (b[l] =
-      function () {(b[l].q = b[l].q || []).push(arguments)});
-    b[l].l = +new Date;
-    e      = o.createElement(i);
-    r      = o.getElementsByTagName(i)[0];
-    e.src  = '//www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e, r)
-  }(window, document, 'script', 'ga'));
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+  <script>
+      (function (b, o, i, l, e, r) {
+        b.GoogleAnalyticsObject = l;
+        b[l] || (b[l] =
+          function () { (b[l].q = b[l].q || []).push(arguments) });
+        b[l].l = +new Date;
+        e = o.createElement(i);
+        r = o.getElementsByTagName(i)[0];
+        e.src = '//www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e, r)
+      }(window, document, 'script', 'ga'));
+    ga('create', 'UA-XXXXX-X', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
+
 </html>
